# sharly-chess-installer

./: .gitignore  pyproject.toml
images/: sharly-chess.icns
src/: installer.py  updater.py
src/common/: __init__.py  admin.py  exception.py  i18n.py
src/gui/: gui_updater.py
src/version_installer/: installer.py
