[build-system]
requires = ["setuptools >= 75.5.0", "requests ~= 2.32.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sharly-chess-installer"
description = "An application Windows / MacOS installer and updater for the Sharly Chess application"
requires-python = ">=3.13.0"
version = "0.1.0"

authors = [
  { name = "Youri Aubry", email = "support@sharly-chess.com" },
]
readme = "README.md"
dependencies = [
  "packaging ~= 26.2",
  "requests ~= 2.34.2",
  "toga ~= 0.5.4",
  "tqdm ~= 4.68.3",
]
